--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -328,6 +328,7 @@ QuotedSOldLeads As screen:
 
                     HtmlTextBuildingNameSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         Font: =Font.Arial
                         Height: =20
                         HtmlText: |-
@@ -344,6 +345,7 @@ QuotedSOldLeads As screen:
 
                     htmltextTrackingNumberSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         Font: =Font.Arial
                         Height: =20
                         HtmlText: |-
@@ -360,6 +362,7 @@ QuotedSOldLeads As screen:
 
                     htmltxtAddressSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
@@ -377,6 +380,7 @@ QuotedSOldLeads As screen:
 
                     htmltxtZipcodeSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =0
@@ -395,6 +399,7 @@ QuotedSOldLeads As screen:
 
                     htmltxtDateSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
@@ -457,6 +462,7 @@ QuotedSOldLeads As screen:
 
                     htmltxtSoldDateSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =If(btnheaderSoldLeads.Text="Sold Leads",25,0)
@@ -475,6 +481,7 @@ QuotedSOldLeads As screen:
 
                     htmltextContractNumberSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         Font: =Font.Arial
                         Height: =20
                         HtmlText: |-
@@ -512,6 +519,7 @@ QuotedSOldLeads As screen:
 
                     htmltxtQQTeamMemberSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
@@ -568,6 +576,7 @@ QuotedSOldLeads As screen:
 
                     htmltxtStatusDateSL As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
