--- a/QuantumTechnicianApp/Src/QuotedSOldLeads_1.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads_1.fx.yaml
@@ -332,6 +332,7 @@ QuotedSOldLeads_1 As screen:
 
                     HtmlTextBuildingNameSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         Font: =Font.Arial
                         Height: =20
                         HtmlText: |-
@@ -348,6 +349,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltextTrackingNumberSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         Font: =Font.Arial
                         Height: =20
                         HtmlText: |-
@@ -364,6 +366,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltxtAddressSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
@@ -381,6 +384,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltxtZipcodeSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =0
@@ -399,6 +403,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltxtDateSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
@@ -461,6 +466,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltxtSoldDateSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =If(btnheaderSoldLeads_1.Text="Sold Leads",25,0)
@@ -479,6 +485,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltextContractNumberSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         Font: =Font.Arial
                         Height: =20
                         HtmlText: |-
@@ -516,6 +523,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltxtQQTeamMemberSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
@@ -572,6 +580,7 @@ QuotedSOldLeads_1 As screen:
 
                     htmltxtStatusDateSL_1 As htmlViewer:
                         AutoHeight: =true
+                        DisabledBorderColor: =RGBA(56, 56, 56, 1)
                         DisplayMode: =DisplayMode.View
                         Font: =Font.Arial
                         Height: =20
