--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -354,6 +354,7 @@ RejectedLeads As screen:
 
                 HtmlTextBuildingNameRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
@@ -370,6 +371,7 @@ RejectedLeads As screen:
 
                 htmltextTrackingNumberRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
@@ -386,6 +388,7 @@ RejectedLeads As screen:
 
                 htmltxtAddressRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -402,6 +405,7 @@ RejectedLeads As screen:
                     ZIndex: =8
 
                 htmltxtZipcodeRS As htmlViewer:
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =0
@@ -420,6 +424,7 @@ RejectedLeads As screen:
 
                 htmltxtCreatedDateRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -470,6 +475,7 @@ RejectedLeads As screen:
 
                 htmltextContractNumberRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
@@ -486,6 +492,7 @@ RejectedLeads As screen:
 
                 htmltxtQQTeamMemberRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -503,6 +510,7 @@ RejectedLeads As screen:
 
                 htmltxtLeadCommentRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -520,6 +528,7 @@ RejectedLeads As screen:
 
                 htmltxtDateRS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
