--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -413,6 +413,7 @@ SubmittedLeadScreen As screen:
 
                 HtmlTextBuildingNameSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
@@ -428,6 +429,7 @@ SubmittedLeadScreen As screen:
 
                 htmltextTrackingNumberSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
@@ -443,6 +445,7 @@ SubmittedLeadScreen As screen:
 
                 htmltxtAddressSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -458,6 +461,7 @@ SubmittedLeadScreen As screen:
                     ZIndex: =4
 
                 htmltxtZipcodeSLS As htmlViewer:
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =0
@@ -475,6 +479,7 @@ SubmittedLeadScreen As screen:
 
                 htmltxtDateSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -548,6 +553,7 @@ SubmittedLeadScreen As screen:
 
                 htmltextContractNumberSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
@@ -563,6 +569,7 @@ SubmittedLeadScreen As screen:
 
                 htmltxtQQTeamMemberSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
@@ -580,6 +587,7 @@ SubmittedLeadScreen As screen:
 
                 htmltxtStatusDateSLS As htmlViewer:
                     AutoHeight: =true
+                    DisabledBorderColor: =RGBA(56, 56, 56, 1)
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
                     Height: =20
