--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -724,7 +724,7 @@ DashboardScreen As screen:
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 Width: =Parent.Width
-                ZIndex: =3
+                ZIndex: =2
 
                 ctnQuatedLeadsDS As groupContainer.manualLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -1060,7 +1060,7 @@ DashboardScreen As screen:
                 Width: |-
                     =//Parent.Width-50
                     Parent.Width/1.08
-                ZIndex: =4
+                ZIndex: =3
 
                 btnCreateLeadDS As button:
                     BorderThickness: =4
@@ -1120,6 +1120,25 @@ DashboardScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
+            Container3 As groupContainer.horizontalAutoLayoutContainer:
+                DropShadow: =DropShadow.None
+                FillPortions: =0
+                Height: =60
+                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =5
+
+                Button2_1 As button:
+                    Fill: =Header.HUserColor
+                    HoverFill: =
+                    OnSelect: =Set(VarReportIssue,true)
+                    Text: ="Report Issue"
+                    Width: =140
+                    ZIndex: =1
+
             ctnforSpaceLeadDS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.Center
                 DropShadow: =DropShadow.None
@@ -1132,7 +1151,7 @@ DashboardScreen As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Width: =Parent.Width
-                ZIndex: =5
+                ZIndex: =6
 
                 imgLogoDS As image:
                     DisplayMode: =DisplayMode.View
@@ -1289,25 +1308,4 @@ DashboardScreen As screen:
                     Width: =4
                     X: =1
                     ZIndex: =5
-
-    "MeasureInMR1 As 'Measure in MR (preview)'.pcfdataset":
-        BorderFillColor: =RGBA(47, 81, 151, 1)
-        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-        DisabledContentColor: =RGBA(166, 166, 166, 1)
-        DisabledFillColor: =RGBA(244, 244, 244, 1)
-        DisplayMode: =DisplayMode.Edit
-        FillColor: =RGBA(56, 96, 178, 1)
-        Height: =70
-        HoverBorderColor: =RGBA(88, 115, 171, 1)
-        HoverContentColor: =RGBA(255, 255, 255, 1)
-        HoverFillColor: =RGBA(47, 81, 151, 1)
-        OnMixedRealitySelect: =false
-        PressedBorderColor: =RGBA(56, 96, 178, 1)
-        PressedContentColor: =RGBA(56, 96, 178, 1)
-        PressedFillColor: =RGBA(255, 255, 255, 1)
-        TextColor: =RGBA(255, 255, 255, 1)
-        Width: =280
-        X: =350
-        Y: =10
-        ZIndex: =5
 
