--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -123,13 +123,13 @@
     "Id": "9d662df8-091d-4444-8272-05db92ce280a",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "SEC Lead Generation App",
+    "Name": "SEC Lead Generation App Dev",
     "OriginatingVersion": "1.331",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "SEC Lead Generation App",
+    "AppName": "SEC Lead Generation App Dev",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
