--- a/QuantumTechnicianApp/Src/QuotedSOldLeads_1.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads_1.fx.yaml
@@ -231,9 +231,65 @@ QuotedSOldLeads_1 As screen:
                     '#CopilotOverlayLabel': ="Filtered"
                     Height: =If(CountRows(glryLeadsSL_1.AllItems)<2,glryLeadsSL_1.TemplateHeight+20,Parent.Height)
                     Items: |-
-                        =/*SortByColumns(Search(Sort(Filter(Localleadinformation,//Email=User().Email  && 
-                        LeadStatus=Header && Email=User().Email && If(LeadStatus="Quoted",Year(ProposedLeadDate)=Year(ThisItem.Year),Year(SoldLeadDate)=Year(ThisItem.Year))),If(LeadStatus="Quoted",ProposedLeadDate,SoldLeadDate),SortOrder.Descending),IntxtSearchBoxSoldLeads_1.Text,shlrf_contractnumber,shlrf_address,shlrf_buildingname,shlrf_zipcode,shlrf_leadtrackingnumber),If(cboxSortSoldLeads_1.Selected.Value="Created Date","createdon",cboxSortSoldLeads_1.Selected.Value="QQ Team Name","shlrf_qqteamname",cboxSortSoldLeads_1.Selected.Value="Mechanic Name","shlrf_mechanicname",cboxSortSoldLeads_1.Selected.Value="Contract No.","shlrf_contractnumber",cboxSortSoldLeads_1.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",cboxSortSoldLeads_1.Selected.Value="Building Name","shlrf_buildingname",cboxSortSoldLeads_1.Selected.Value="Address","shlrf_address",cboxSortSoldLeads_1.Selected.Value="Lead Status","shlrf_leadstatus"),If(iconSortSoldLeads_1.Icon=Icon.ArrowDown,SortOrder.Descending,iconSortSoldLeads_1.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending))*/
-                        Sort(
+                        =SortByColumns(
+                            Search(
+                                Sort(
+                                    Filter(
+                                        Localleadinformation,
+                                        If(
+                                            VarHeader = "Quoted",
+                                            LeadStatus = VarHeader && Email = User().Email && If(
+                                                LeadStatus = "Quoted",
+                                                Year(ProposedLeadDate) = Year('glrySold/QuotedLeads'.Selected.Year) && Month(ProposedLeadDate) >= StartMonth && Month(ProposedLeadDate) <= EndMonth
+                                            ),
+                                            VarHeader = "Sold",
+                                            LeadStatus = VarHeader && Email = User().Email && If(
+                                                LeadStatus = "Sold",
+                                                Year(SoldLeadDate) = Year('glrySold/QuotedLeads'.Selected.Year) && Month(SoldLeadDate) >= StartMonth && Month(SoldLeadDate) <= EndMonth
+                                            )
+                                        )
+                                    ),
+                                    If(
+                                        LeadStatus = "Quoted",
+                                        ProposedLeadDate,
+                                        SoldLeadDate
+                                    ),
+                                    SortOrder.Descending
+                                ),
+                                IntxtSearchBoxSoldLeads_1.Text,
+                                shlrf_contractnumber,
+                                shlrf_address,
+                                shlrf_buildingname,
+                                shlrf_zipcode,
+                                shlrf_leadtrackingnumber
+                            ),
+                            If(
+                                cboxSortSoldLeads_1.Selected.Value = "Created Date",
+                                "createdon",
+                                cboxSortSoldLeads_1.Selected.Value = "QQ Team Name",
+                                "shlrf_qqteamname",
+                                cboxSortSoldLeads_1.Selected.Value = "Mechanic Name",
+                                "shlrf_mechanicname",
+                                cboxSortSoldLeads_1.Selected.Value = "Contract No.",
+                                "shlrf_contractnumber",
+                                cboxSortSoldLeads_1.Selected.Value = "Lead Tracking No.",
+                                "shlrf_leadtrackingnumber",
+                                cboxSortSoldLeads_1.Selected.Value = "Building Name",
+                                "shlrf_buildingname",
+                                cboxSortSoldLeads_1.Selected.Value = "Address",
+                                "shlrf_address",
+                                cboxSortSoldLeads_1.Selected.Value = "Lead Status",
+                                "shlrf_leadstatus"
+                            ),
+                            If(
+                                iconSortSoldLeads_1.Icon = Icon.ArrowDown,
+                                SortOrder.Descending,
+                                iconSortSoldLeads_1.Icon = Icon.ArrowUp,
+                                SortOrder.Ascending,
+                                SortOrder.Descending
+                            )
+                        )
+                        /*Sort(
                             Filter(
                                 Localleadinformation,
                                 If(
@@ -255,7 +311,7 @@ QuotedSOldLeads_1 As screen:
                                 SoldLeadDate
                             ),
                             SortOrder.Descending
-                        )
+                        )*/
                     Layout: =Layout.Vertical
                     TemplatePadding: =0
                     TemplateSize: =If(btnheaderSoldLeads_1.Text="Quoted Leads" ||btnheaderSoldLeads_1.Text="Sold Leads",320,200)
