--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -493,7 +493,7 @@ SupportScreen As screen:
                             ID: VarReportGUID,
                             ReportedBy: User().Email,
                             IssueDescription: txtiptReportIssueSS.Text,
-                            Sender: "Technician"
+                            Sender: User().FullName & " (Technician)"
                         }
                     );
                     If(
@@ -506,13 +506,13 @@ SupportScreen As screen:
                             NotificationType.Error
                         );
                         ,
-                        Office365Outlook.SendEmail("paarth.sanghavi@schindler.com","Issue Reported","Reported by : " & User().Email  & Char(10) &
-                "Sender : " & "Technician" & Char(10) & "App Name : " & LookUp(
+                        Office365Outlook.SendEmail("kishan.mahajan@schindler.com","Issue reported by Technician","Reported by : " & User().Email  & Char(10) &
+                "Sender : " & User().FullName & " (Technician)" & Char(10) & "App Name : " & LookUp(
                  'Environment Variable Values',
                  'Environment Variable Definition'.'Schema Name' = "shlrf_TechnicianAppName",
                  Value
                 ) & Char(10)&Char(10) & "Issue Description : " & 
-                 txtiptReportIssueSS.Text,{Cc:"melanie.lee@schindler.com;kishan.mahajan@schindler.com;wallabh.sardesai@schindler.com"});
+                 txtiptReportIssueSS.Text,{Cc:"kishan.mahajan@schindler.com"});
                         Set(
                             VarReportIssue,
                             false
