--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -506,7 +506,7 @@ SupportScreen As screen:
                             NotificationType.Error
                         );
                         ,
-                        Office365Outlook.SendEmail("paarth.sanghavi@schindler.com","Issue reported by Technician","Reported by : " & User().Email  & Char(10) &
+                        Office365Outlook.SendEmail("paarth.sanghavi@schindler.com;akio.simokomaki@schindler.com","Issue reported by Technician","Reported by : " & User().Email  & Char(10) &
                 "Sender : " & User().FullName & " (Technician)" & Char(10) & "App Name : " & LookUp(
                  'Environment Variable Values',
                  'Environment Variable Definition'.'Schema Name' = "shlrf_TechnicianAppName",
