--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -183,7 +183,7 @@ QuotedSOldLeads As screen:
                 BorderColor: =RGBA(219, 219, 219, 1)
                 BorderThickness: =2
                 DelayItemLoading: =true
-                Height: =Parent.Height-ctnSearchBarSoldLeads.Height-ctnSortBarSoldLeads.Height
+                Height: =Parent.Height//-ctnSearchBarSoldLeads.Height-ctnSortBarSoldLeads.Height
                 Items: |+
                     =Sort(If(
                         cumulatively = true,
@@ -840,16 +840,17 @@ QuotedSOldLeads As screen:
                         Navigate(QuotedSOldLeads_1);
                     Width: =Parent.Width/14
                     X: =rectangleYearSL.Width -(1.08*Self.Width)
-                    Y: =(Parent.Y-Self.Height)/8
+                    Y: =Parent.Y
                     ZIndex: =18
 
             ctnSearchBarSoldLeads As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 Fill: =RGBA(255, 255, 255, 1)
-                Height: =If(Parent.Width>800,60,80)
+                Height: =0//If(Parent.Width>800,60,80)
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutMode: =LayoutMode.Auto
                 PaddingLeft: =2
+                Visible: =false
                 Width: =Parent.Width
                 X: =10
                 ZIndex: =5
@@ -903,12 +904,13 @@ QuotedSOldLeads As screen:
             ctnSortBarSoldLeads As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 Fill: =RGBA(255, 255, 255, 1)
-                Height: =80
+                Height: =0
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutGap: =10
                 LayoutJustifyContent: =LayoutJustifyContent.End
                 LayoutMode: =LayoutMode.Auto
                 PaddingLeft: =2
+                Visible: =false
                 Width: =Parent.Width/1.04
                 X: =10
                 Y: =ctnSearchBarSoldLeads.Height
