--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1105,6 +1105,7 @@ DashboardScreen As screen:
                         Set(VarAdditionExpense,false);
                         Set(VarTravel,false);
                         Set(VarSafetySummary,false);
+                        Set(VarBuildingList,Blank());
                         Navigate(CreatLeadScreen);
                         Set(VarIndicator,true);
                         
